--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cover-hooks",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "通用的react hooks",
   "main": "index.ts",
   "scripts": {
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "animate.css": "^3.7.2",
+    "antd": "^4.1.5",
     "babel-loader": "^8.1.0",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
