--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cover-hooks",
-  "version": "0.0.8",
+  "version": "0.0.17",
   "description": "通用的react hooks",
   "main": "index.ts",
   "scripts": {
@@ -20,17 +20,13 @@
     "animate.css": "^3.7.2",
     "antd": "^4.1.5",
     "babel-loader": "^8.1.0",
-    "font-awesome": "^4.7.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.2",
@@ -38,6 +34,8 @@
     "html-webpack-plugin": "^4.2.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "react": "16.8.5",
+    "react-dom": "16.8.5",
     "style-loader": "^1.1.4",
     "ts-loader": "^7.0.0",
     "typescript": "^3.8.3",
