--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "lib": ["ES2015", "DOM"],
     "sourceMap": false,
     // "allowJs": true,
+    // "declaration": true,
+    // "declarationDir": "./types",
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "src",
