--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "author": "zhaodeezhu",
   "license": "ISC",
   "dependencies": {
+    "@types/react-resizable": "^1.7.2",
     "animate.css": "^3.7.2",
     "antd": "^4.1.5",
     "babel-loader": "^8.1.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "react-resizable": "^1.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
